editing landing page with links to story portal 2 and new about pages

--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
   <h1> STORY PORTAL </h1>
     <br><br><br> 
   <p> STORY 1 
-
-    <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">Start here</a>
+    <br><br> 
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">start here.</a>
+    <a href="https://StoryPortal.github.io/about_storyportal_1.html">about.</a>
   </p>
 
-<br><br><br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> 
-     <p> Art Neureau 2023 <br><br> 
+  <br><br><br> 
+<p> STORY 2
+  <br><br> 
+  <a href="https://storyportal.github.io/desktopTest/desktop_dev.html">enter here.</a> 
+  <a href = "https://storyportal.github.io/about_storyportal_2.html">about. </a>
+</p>
+
+<br><br><br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
+     <p> 2025 <br><br> 
          --Todd Appleby and Su-Yee Lee -- <br><br> 
      <a href="https://StoryPortal.github.io/about.html"> About </a> </p> 
 </body>
