--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <br><br><br> 
 <p> STORY 2
   <br><br> 
-  <a href="https://storyportal.github.io/desktopTest/about_storyportal_2.html">enter here.</a> 
+  <a href="https://storyportal.github.io/about_storyportal_2.html">enter here.</a> 
 
 </p>
 
