--- a/about_storyportal_2.html
+++ b/about_storyportal_2.html
@@ -18,7 +18,7 @@
 </p>
     
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/desktop_dev.html">enter story portal 2  </a>
+    <a href="https://StoryPortal.github.io/desktopTest/desktop_dev.html">enter story portal 2  </a>
     <br><br><br><br><br><br><br><br><br><br>
     <br>    <a href="https://StoryPortal.github.io/index.html">back to home  </a>
   </p>
