adding pictures and updating text

--- a/about_storyportal_1.html
+++ b/about_storyportal_1.html
@@ -7,7 +7,7 @@
     <br><br> 
     We originally showed this project at Art Neureau 2023, <br>
     a neuroscience themed art show hosted by the UW Graduate Program in Neuroscience.<br>
-    Inspired by choose-your-own adventure books, online personality tests, and neural circuits - <br>
+    Inspired by choose-your-own adventure books, online personality tests, and neural circuits,  <br>
     we wanted to create a multimedia project that was greater than the sum of its parts. <br>
     The website is constructed of linked web pages with connected paths informed by neural circuit motifs, <br>
     e.g. recurrence, parallel pathways, feedforward/back. <br><br> <br><br> 
