--- a/about.html
+++ b/about.html
@@ -1,14 +1,8 @@
 <link rel="stylesheet" type="text/css" href="../style.css">
 
 <body>
-  <h1>About This Project </h1>
-  <p> This project is a collaboration between Todd Appleby and Su-Yee Lee, two neuroscientists. <br><br>
-    Inspired by choose-your-own adventure books, online personality tests and neural circuits - <br><br>
-    we wanted to create a multimedia project that was greater than the sum of its parts. <br><br>
-    The website is constructed of linked web pages with connected paths informed by neural circuit motifs, <br><br>
-    e.g. recurrence, parallel pathways, feedforward/back. <br><br> <br><br> 
-    We hope to make more stories and multimedia content in the future. <br><br> 
-    This is the first. <br><br><br><br>
+  <h1>About</h1>
+  <p> Story Portal is a collaboration between Todd Appleby and Su-Yee Lee, two neuroscientists based in Seattle. 
   </p>
     
   <p class = "q1">  
